--- a/src/Search/Searchbar.css
+++ b/src/Search/Searchbar.css
@@ -2,8 +2,8 @@
     width: 70%;
     margin: 0 auto;
     display: flex;
-    align-items: stretch; /* Убедимся, что дети будут растянуты по высоте контейнера */
-    height: 4vw; /* Устанавливаем фиксированную высоту */
+    align-items: stretch;
+    height: 4vw;
 }
 
 .search-form input {
@@ -14,24 +14,28 @@
     border-right: none;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
-    box-sizing: border-box; /* Включаем границы и паддинги в размер элемента */
+    box-sizing: border-box;
 }
 
 .search-form button {
     width: 10%;
-    height: 100%; /* Устанавливаем высоту 100% от высоты контейнера */
-    border: 2px solid #0097B3;
+    height: 100%;
     border-left: none;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    box-sizing: border-box; /* Включаем границы и паддинги в размер элемента */
-    padding: 0; /* Убираем паддинги */
+    box-sizing: border-box;
+    padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center; /* Центрируем текст внутри кнопки */
+    align-items: center;
 }
 
-.search-img-container img{
+
+.search-img-container img {
     height: 2vw;
 }
 
+.search-all-patients-container {
+    width: 100%;
+    margin: 3vw 0;
+}
