--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+body{
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../src/assets/background.jpg");
+}
+
+#root{
+  height: 100%;
+  width: 100%;
+  background-color: rgba(250, 250, 250, 0.89);
+}
 button{
   border:none;
   color: white;
@@ -24,4 +37,10 @@ input{
 input:focus{
   border: 1px solid #0097B3;
   transition: border-color ease-in 0.7s;
+}
+
+p{
+  font-family: Arial, sans-serif;
+  font-size: 1.2vw;
+  margin: 0;
 }
