add histories adding and editing and the same for examinations

--- a/src/Search/SearchPatient.css
+++ b/src/Search/SearchPatient.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     border: 2px solid #cacaca;
-    background: #fafafa;
+    background: #ffffff;
     border-radius: 15px;
     padding: 1vw 0 1vw 0;
     transition: background ease-in 0.2s;
