--- a/src/Authorization/Authorization.css
+++ b/src/Authorization/Authorization.css
@@ -42,5 +42,11 @@ h2{
     font-weight: 400;
 }
 
+.notification{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    color: #ff0000;
+}
+
 
 
