--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ button{
   transition: background-color ease-in 0.3s;
   padding: 1vw 1vw 1vw 1vw;
   font-size: 1.2vw;
+  border-radius: 15px;
   background-color: #0097B3;
 }
 
@@ -25,7 +26,7 @@ button:hover{
   background-color: #00afcf;
 }
 
-input{
+input, textarea{
   outline:none;
   border-radius: 15px;
   transition: border-color ease-in 0.5s;
@@ -34,7 +35,7 @@ input{
   font-size: 1.2vw;
 }
 
-input:focus{
+input:focus, textarea:focus{
   border: 1px solid #0097B3;
   transition: border-color ease-in 0.7s;
 }
@@ -44,3 +45,4 @@ p{
   font-size: 1.2vw;
   margin: 0;
 }
+
