add all needed css

--- a/src/Search/SearchPatient.css
+++ b/src/Search/SearchPatient.css
@@ -1,6 +1,6 @@
 .search-patient-container {
     width: 70%;
-    margin: 0 auto;
+    margin: 1vw auto;
     display: flex;
     align-items: center;
     justify-content: center;
