--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,9 @@
 body{
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
-  background-image: url("../src/assets/background.jpg");
+  background-image: url("../src/assets/background2.jpg");
 }
 
-#root{
-  height: 100%;
-  width: 100%;
-  background-color: rgba(250, 250, 250, 0.89);
-}
 button{
   border:none;
   color: white;
@@ -45,4 +38,6 @@ p{
   font-size: 1.2vw;
   margin: 0;
 }
+
+
 
