--- a/src/PatientPage/Appointment/AppointmentList.css
+++ b/src/PatientPage/Appointment/AppointmentList.css
@@ -1,12 +1,16 @@
 .all-appointments-container{
     display: flex;
     flex-direction: column;
+    text-align: left;
+}
+
+.appointments-container{
     background-color: white;
     padding: 2vw;
     border-radius: 15px;
     box-shadow: 3px 3px 15px 3px rgba(0, 0, 0, 0.39);
     width: 95%;
-    text-align: left;
+    margin: 1vw auto;
 }
 
 .all-appointments-container p {
