--- a/src/Admin/UserSearch/EditUser.css
+++ b/src/Admin/UserSearch/EditUser.css
@@ -1,19 +1,23 @@
-.edit-user-container{
+.edit-user-container,
+.add-user-container {
     padding: 0;
 }
 
-.edit-user-form-container{
+.edit-user-form-container,
+.add-user-form-container {
     width: 40%;
     margin: 0 auto;
     padding-top: 1.8vw;
 }
 
-.edit-user-form-container .edit-user-form{
+.edit-user-form-container .edit-user-form,
+.add-user-form-container .add-user-form {
     display: flex;
     flex-direction: column;
 }
 
-.edit-user-form select{
+.edit-user-form select,
+.add-user-form select {
     border-radius: 10px;
     font-size: 1.2vw;
     padding: 0.5vw;
@@ -22,7 +26,11 @@
 .edit-user-form input,
 .edit-user-form textarea,
 .edit-user-form button,
-.edit-user-form select{
+.edit-user-form select,
+.add-user-form input,
+.add-user-form textarea,
+.add-user-form button,
+.add-user-form select{
     font-family: Arial, sans-serif;
     margin: 0.5vw 0;
     resize: none;
