--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  background-image: url("../src/assets/background2.jpg");
+  background-image: url("../src/assets/background0.png");
 }
 
 button{
